--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,7 +28,21 @@
     <string name="notification_time">Notification Time</string>
     <string name="default_time">00:00:00</string>
     <string name="submit">Submit</string>
+    <string name="save">Save</string>
+    <string name="delete">Delete</string>
+
+    <!-- Save and Delete Alerts -->
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="save_note">Save Note</string>
+    <string name="delete_note">Delete Note</string>
+    <string name="save_alert">"Are you sure you want to replace this note?"</string>
+    <string name="delete_alert">"Are you sure you want to delete this note?"</string>
 
     <!-- Search Screen -->
     <string name="keywords">Keywords</string>
+
+    <!-- List Screen -->
+    <string name="date">Date</string>
+    <string name="description">Description</string>
 </resources>
