--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">Quick Notes</string>
 
+    <!-- Facebook -->
+    <string name="facebook_app_id">995465440895000</string>
+    <string name="fb_login_protocol_scheme">fb995465440895000</string>
+
     <!-- Fragments -->
     <string name="instructions">Instructions</string>
     <string name="list">List</string>
@@ -10,6 +14,7 @@
     <string name="search">Search</string>
     <string name="settings">Settings</string>
     <string name="statistics">Statistics</string>
+    <string name="multiple_notes">Multiple Notes</string>
     <string name="drawer_open">Drawer Open</string>
     <string name="drawer_close">Drawer Close</string>
 
