--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,12 +11,14 @@
     <string name="login">Login</string>
     <string name="logout">Logout</string>
     <string name="note">Note</string>
+    <string name="notes">Notes</string>
     <string name="search">Search</string>
     <string name="settings">Settings</string>
     <string name="statistics">Statistics</string>
     <string name="multiple_notes">Multiple Notes</string>
     <string name="drawer_open">Drawer Open</string>
     <string name="drawer_close">Drawer Close</string>
+    <string name="logout_alert">Are you sure you want to log out?</string>
 
     <!-- Login Screen -->
     <string name="email">Email</string>
@@ -50,14 +52,17 @@
 
     <!-- Search Screen -->
     <string name="keywords">Keywords</string>
+    <string name="search_untagged">Search Untagged</string>
 
     <!-- List Screen -->
     <string name="date">Date</string>
     <string name="description">Description</string>
     <string name="all_posts">All Posts</string>
-    <string name="posts_involving">Posts involving %1$s</string>
-    <string name="posts_tagged">Posts tagged %1$s</string>
-    <string name="posts_involving_and_tagged">Posts involving %1$s and tagged %2$s</string>
+    <string name="posts_involving">Posts Involving %1$s</string>
+    <string name="posts_tagged">Posts Tagged %1$s</string>
+    <string name="posts_involving_and_tagged">Posts Involving %1$s And Tagged %2$s</string>
+    <string name="untagged_posts">Untagged Posts</string>
+    <string name="untagged_posts_involving">Untagged Posts Involving %1$s</string>
 
     <!-- Error Messages -->
     <string name="fields_empty">Please fill in all fields.</string>
